# DoomArena

./: .gitignore  CODE_OF_CONDUCT.md  Makefile  README.md  SECURITY.md  index.html  pytest.ini
doomarena/browsergym/: README.md  pyproject.toml
doomarena/browsergym/src/doomarena/browsergym/: attack_gateway.py  attacked_browser_env_args.py  success_filters.py
doomarena/browsergym/src/doomarena/browsergym/attacks/: popup_attacks.py
doomarena/browsergym/src/doomarena/browsergym/scripts/: bgym_analysis.py  run_banner_attack_webarena_reddit_notext.py  run_banner_with_alt_text_attack_webarena_reddit.py  run_bgym_experiment.py  run_popup_attack_webarena_reddit.py  sweep_bgym.py
doomarena/browsergym/tests/: test_browsergym_attack_gateway.py  test_popup_attack.py  test_user_generated_content.py  utils.py
doomarena/core/: pyproject.toml
doomarena/mailinject/: README.md  pyproject.toml
doomarena/mailinject/src/doomarena/mailinject/: attacks.py  experiments.py  success_filters.py  types.py
doomarena/mailinject/src/doomarena/mailinject/agent/: prompted_gpt.py
doomarena/mailinject/src/doomarena/mailinject/environment/: bm25.py
doomarena/mailinject/src/doomarena/mailinject/scripts/: attacks.py  batch_testing.py  interactive_demo.py  llm_configs.py  old_attacks.py  run_attacks.py  run_mailinject_attacks.py
doomarena/mailinject/tests/: test_mailinject_agent.py
doomarena/mcp/: README.md  pyproject.toml
doomarena/mcp/src/doomarena/mcp/: add_server.py  mcp_gateway.py  sort_server.py
doomarena/mcp/src/doomarena/mcp/scripts/: run_mcp_experiment.py  run_mcp_experiment_2.py
doomarena/osworld/: README.md  pyproject.toml
doomarena/osworld/src/doomarena/osworld/: attack_gateway.py  popup_inpainting_attack.py
doomarena/osworld/src/doomarena/osworld/attacks/: attack.py  general_attack_utils.py  image_processing.py
doomarena/osworld/src/doomarena/osworld/mm_agents/: agent.py  aguvis_agent.py  jedi_3b_agent.py  jedi_7b_agent.py  uitars_agent.py
doomarena/osworld/src/doomarena/osworld/scripts/: run.py  run_example.yaml  run_subset.yaml  test_tiny.json
doomarena/osworld/src/doomarena/osworld/success_filters/: popup_click_success_filter.py
doomarena/promptceptor/: README.md  pyproject.toml
doomarena/promptceptor/src/doomarena/promptceptor/: cli.py  patch.py  replay.py
doomarena/promptceptor/src/doomarena/promptceptor/integrations/: __init__.py  litellm.py  openai_chat.py  openai_responses.py
doomarena/promptceptor/tests/: test_litellm_patch.py  test_openai_chat_patch.py  test_openai_responses_patch.py  test_patch_llm_method.py
doomarena/taubench/: README.md  pyproject.toml
doomarena/taubench/src/doomarena/taubench/scripts/: sbd_experiment.py
notebooks/: Taubench_attack_demo.ipynb  doomarena_intro_notebook.ipynb
